More/Logfile Analyzer Styling Data.css
/* ... */
/* Signals */
	svg.signals-switches {
		display: block;
		width: 2in;
	}
		svg.signals-switches g.switch-base {
			fill: #F4F4E4;
			stroke: #D3D3AB;
			stroke-width: 1px;
		}
		svg.signals-switches text {
			dominant-baseline: central;
			text-anchor: middle;
			fill: black;
		}
			svg.signals-switches text.channel {
				font-size: 4px;
			}
			svg.signals-switches text.sign {
				font-weight: bold;
				font-size: 5px;
			}
/* Simon Smothers */
	svg.simon-smothers {
		display: block;
		width: 3in;
	}
		svg.simon-smothers rect.square {
			stroke-width: 0.1px;
			fill: none;
		}
		svg.simon-smothers text.square-color {
			dominant-baseline: hanging;
			text-anchor: left;
			font-size: 0.33px;
			fill: black;
		}
		svg.simon-smothers text.tile-color {
			dominant-baseline: central;
			text-anchor: middle;
			font-size: 0.5px;
		}
		svg.simon-smothers line.difference {
			stroke-width: 0.1px;
			stroke: #F00;
			stroke-linecap: round;
		}
/* Simon Stacks */
	svg.simon-stacks {
		display: block;
		width: 2.25in;
	}
		svg.simon-stacks polygon.outline-hex {
			stroke: black;
			stroke-width: 1px;
			fill: none;
		}
		.dark-mode svg.simon-stacks polygon.outline-hex {
			stroke: #DDD;
		}
/* Skewers */
	svg.skewers {
		display: block;
	}
		svg.skewers rect.background {
			fill: #111;
			stroke: #310;
			stroke-width: 12px;
		}
		svg.skewers g.sword path:is(.bottom, .blade) {
			fill: #777;
		}
		svg.skewers g.sword path.handle {
			fill: #310;
		}
		svg.skewers g.cell path.diamond {
			stroke: #222;
			stroke-width: 8px;
		}
		svg.skewers g.cell text.color {
			font-size: 30pt;
			dominant-baseline: central;
			text-anchor: middle;
		}
	svg.skewers.displayed {
		width: 2.5in;
	}
	svg.skewers.solution {
		width: 3.75in;
		margin: 0;
	}
/* Slight Gibberish Twist */
	svg.slight-gib-twist-grid {
		display: block;
		width: 50%;
		margin: 0.5em;
	}
		svg.slight-gib-twist-grid rect.slight-gib-twist-cell {
			stroke: #888;
			stroke-width: 8px;
		}
/* Souvenir */
	div.souvenir-answer-set {
		margin: .1em 0;
		line-height: 1.8;
	}
		div.souvenir-answer-set span.souvenir-answer {
			border: 1px solid #888;
			padding: 0 .5em;
			margin: 0 .1em;
		}
		div.souvenir-answer-set span.souvenir-correct-answer {
			background-color: #DFD;
		}
		.dark-mode div.souvenir-answer-set span.souvenir-correct-answer {
			background-color: #1A1;
		}
/* Spilling Paint */
	table.spilling-paint {
		border: 4px solid #AAA;
	}
	.dark-mode table.spilling-paint {
		border: 4px solid #444;
	}
		table.spilling-paint td {
			width: 0.8cm;
			height: 0.8cm;
		}
/* Sueet Wall */
	svg.sueet-wall {
		display: block;
		width: 3in;
		margin: 0.5em;
	}
		svg.sueet-wall rect.cell {
			stroke: black;
			stroke-width: 1.5px;
		}

		svg.sueet-wall text.number-text {
			font-size: 14pt;
			font-family: "Agency FB";
			font-weight: bold;
			dominant-baseline: hanging;
		}

		svg.sueet-wall text.suit {
			font-size: 20pt;
			text-anchor: end;
		}
/* Swish */
	svg.swish-cards {
		width: 40%;
		display: block;
		--ball-color: #ffe200;
	}
	.dark-mode svg.swish-cards {
		--ball-color: #fff200;
	}
		svg.swish-cards rect.card-border {
			fill: none;
			stroke: #571575;
			stroke-width: 6px;
		}
		.dark-mode svg.swish-cards rect.card-border {
			stroke: #80f;
		}
		svg.swish-cards circle.ball {
			fill: var(--ball-color);
		}
		svg.swish-cards circle.hoop {
			fill: none;
			stroke: var(--ball-color);
			stroke-width: 6px;
		}
/* Symbol Cycle */
	img.symbol-cycle-symbol {
		vertical-align: middle;
		margin: 0 5px;
		filter:invert(100%);
	}
	.dark-mode img.symbol-cycle-symbol {
		filter:invert(10%);
	}
/* Symbolic Password */
	div.symbolic-password {
			display: grid;
	}
	div.symbolic-password-small {
		grid-template-columns: repeat(3, 4em);
	}
	div.symbolic-password-big {
		grid-template-columns: repeat(7, 4em);
	}
	img.symbolic-password-solution {
		border: 1px solid red;
	}
/* Synapse Cipher */
	table.synapse-cipher-key {
		margin: 2mm 0;
	}
		table.synapse-cipher-key td {
			width: .67cm;
			height: .67cm;
			border: 1px solid;
			text-align: center;
			vertical-align: middle;
			padding: 0;
		}
/* TAC */
	.playernames text { fill: black; }
	.dark-mode .playernames text { fill: #ddd; }
	.connector { stroke: black; }
	.dark-mode .connector { stroke: #ddd; }
	.connectors { stroke: #003e80; }
	.dark-mode .connectors { stroke: #CCE4FF; }
	.homes rect { stroke: #003e80; }
	.dark-mode .homes rect { stroke: #CCE4FF; }
	.squares rect { stroke: black; }
	.dark-mode .squares rect { stroke: #ddd; }
	.logo { fill: #fff; stroke: #ccc; }
	.dark-mode .logo { fill: black; stroke: #666; }
/* Techincal Keypad */
	text.technical-keypad {
		text-anchor: middle;
		fill: white;
	}
	text.technical-keypad-white {
		fill: black;
	}
	circle.technical-keypad {
		fill-opacity: .9;
	}
	.technical-keypad-red {
		fill: #c00;
		background-color: #c00;
	}
	.technical-keypad-orange {
		fill:#d70;
		background-color:#d70;
	}
	.technical-keypad-yellow {
		fill:#db3;
		background-color:#db3;
	}
	.technical-keypad-green {
		fill:#383;
		background-color:#383;
	}
	.technical-keypad-blue {
		fill:#57c;
		background-color:#57c;
	}
	.technical-keypad-purple {
		fill:#74a;
		background-color:#74a;
	}
	.technical-keypad-black {
		fill:#333;
		background-color:#333;
	}
	.technical-keypad-white {
		fill:#ddd;
		background-color:#ddd;
	}
	.technical-keypad-teal {
		fill:#256;
		background-color:#256;
	}
/* Tents */
	svg.tents .frame {
		fill: #9f9;
		stroke: black;
	}
	svg.tents .grid {
		stroke: black;
	}
	svg.tents .tent {
		fill: black;
	}
	svg.tents .tree-trunk {
		fill: #804803;
		stroke: black;
	}
	svg.tents .tree-canopy {
		fill: #0c0;
		stroke: black;
	}
/* Tetrahedron */
	svg.tetrahedron {
		display: block;
		width: 2in;
		background-color: #556;
		border-radius: .5cm;
	}
		svg.tetrahedron line.edge {
			stroke-width: 2px;
			stroke-linecap: round;
		}
		svg.tetrahedron circle.node {
			fill: #EEE;
			stroke: black;
			stroke-width: 0px;
		}
/* ... */

